package domain.business.incidencias;

public enum TipoMultimedia {
  FOTO,
  VIDEO,
  AUDIO
}
